# red_api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RZ_104_11.c  TODO_List  build-linux.bat  docker-compose.yml  main.c  red_api.c  red_api.h  utils.h
.cmake/api/v1/reply/: index-2024-01-23T14-05-40-0764.json
include/: EP_600.h  RS_104.h  RZB-300.h  RZB_300.h  RZMW_350_11.h  RZM_200_5.h  RZM_350_8.h  RZ_104_11.h  RZ_104_12.h  RZ_163HP_1L.h  RZ_163HP_ML.h  RZ_163_1L.h  RZ_163_ML.h  RZ_163_UHP.h  RZ_300_HDR.h  WW_11.h  paths_config.h  paths_config.h.in  red_api.h  supported_systems_data.h.in  system_config.h  systems_header.h  utils.h
libs/: EP_600.c  RS_104.c  RZB_300.c  RZMW_350_11.c  RZM_200_5.c  RZM_350_8.c  RZ_104_11.c  RZ_104_12.c  RZ_163HP_1L.c  RZ_163HP_ML.c  RZ_163_1L.c  RZ_163_ML.c  RZ_163_UHP.c  RZ_300_HDR.c  WW_11.c  red_api.c
resources/linux/: libjson-c.so.5.3.0  libred_api.so.1  libred_api.so.1.0  supported_systems.json
src/: main.c  supported_systems.json  supported_systems.txt  system_config.c
tools/: utils.c
